logs/validate.20260408-021802.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTBBAlphaMtEph.rs:154:80
    |
154 | ...                   #[trigger] T::le(node_val, x) && x != node_val by {};
    |                                                                      ^^

error[E0425]: cannot find type `BSTBBAlphaMtEphInv` in this scope
   --> src/Chap37/BSTBBAlphaMtEph.rs:879:33
    |
879 |     impl<T> std::fmt::Debug for BSTBBAlphaMtEphInv<T> {
    |                                 ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTBBAlphaMtEphInv` in this scope
   --> src/Chap37/BSTBBAlphaMtEph.rs:885:35
    |
885 |     impl<T> std::fmt::Display for BSTBBAlphaMtEphInv<T> {
    |                                   ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
   --> src/Chap37/BSTBBAlphaMtEph.rs:893:45
    |
893 |     impl<T: TotalOrder> std::fmt::Debug for BSTBBAlphaMtEph<T> {
    |                                             ^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
   --> src/Chap37/BSTBBAlphaMtEph.rs:893:13
    |
893 |     impl<T: TotalOrder> std::fmt::Debug for BSTBBAlphaMtEph<T> {
    |             ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
    |

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
   --> src/Chap37/BSTBBAlphaMtEph.rs:899:47
    |
899 |     impl<T: TotalOrder> std::fmt::Display for BSTBBAlphaMtEph<T> {
    |                                               ^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
   --> src/Chap37/BSTBBAlphaMtEph.rs:899:13
    |
899 |     impl<T: TotalOrder> std::fmt::Display for BSTBBAlphaMtEph<T> {
    |             ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
    |

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
  --> src/Chap37/BSTSetBBAlphaMtEph.rs:43:19
   |
43 |         pub tree: BSTBBAlphaMtEph<T>,
   |                   ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:143:38
    |
 42 |     pub struct BSTSetBBAlphaMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ------------------------------------------------------------- similarly named struct `BSTSetBBAlphaMtEph` defined here
...
143 |         fn as_tree(&self) -> (tree: &BSTBBAlphaMtEph<T>)
    |                                      ^^^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
143 |         fn as_tree(&self) -> (tree: &BSTSetBBAlphaMtEph<T>)
    |                                         +++

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:159:58
    |
 42 |     pub struct BSTSetBBAlphaMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ------------------------------------------------------------- similarly named struct `BSTSetBBAlphaMtEph` defined here
...
159 |     fn values_vec<T: StTInMtT + Ord + TotalOrder>(tree: &BSTBBAlphaMtEph<T>) -> (values: Vec<T>)
    |                                                          ^^^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
159 |     fn values_vec<T: StTInMtT + Ord + TotalOrder>(tree: &BSTSetBBAlphaMtEph<T>) -> (values: Vec<T>)
    |                                                             +++

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:180:83
    |
 42 |     pub struct BSTSetBBAlphaMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ------------------------------------------------------------- similarly named struct `BSTSetBBAlphaMtEph` defined here
...
180 |     fn rebuild_from_vec<T: StTInMtT + Ord + TotalOrder>(values: Vec<T>) -> (tree: BSTBBAlphaMtEph<T>)
    |                                                                                   ^^^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
180 |     fn rebuild_from_vec<T: StTInMtT + Ord + TotalOrder>(values: Vec<T>) -> (tree: BSTSetBBAlphaMtEph<T>)
    |                                                                                      +++

error[E0425]: cannot find type `BSTBBAlphaMtEph` in this scope
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:484:31
    |
 42 |     pub struct BSTSetBBAlphaMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ------------------------------------------------------------- similarly named struct `BSTSetBBAlphaMtEph` defined here
...
484 |         fn as_tree(&self) -> &BSTBBAlphaMtEph<T> { &self.tree }
    |                               ^^^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
484 |         fn as_tree(&self) -> &BSTSetBBAlphaMtEph<T> { &self.tree }
    |                                  +++

error[E0433]: failed to resolve: use of undeclared type `BSTBBAlphaMtEph`
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:183:24
    |
183 |         let mut tree = BSTBBAlphaMtEph::new();
    |                        ^^^^^^^^^^^^^^^ use of undeclared type `BSTBBAlphaMtEph`
    |
help: a struct with a similar name exists
    |
183 |         let mut tree = BSTSetBBAlphaMtEph::new();
    |                           +++

error[E0433]: failed to resolve: use of undeclared type `BSTBBAlphaMtEph`
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:202:24
    |
202 |         let mut tree = BSTBBAlphaMtEph::new();
    |                        ^^^^^^^^^^^^^^^ use of undeclared type `BSTBBAlphaMtEph`
    |
help: a struct with a similar name exists
    |
202 |         let mut tree = BSTSetBBAlphaMtEph::new();
    |                           +++

error[E0433]: failed to resolve: use of undeclared type `BSTBBAlphaMtEph`
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:224:23
    |
224 |                 tree: BSTBBAlphaMtEph::new(),
    |                       ^^^^^^^^^^^^^^^ use of undeclared type `BSTBBAlphaMtEph`
    |
help: a struct with a similar name exists
    |
224 |                 tree: BSTSetBBAlphaMtEph::new(),
    |                          +++

error[E0433]: failed to resolve: use of undeclared type `BSTBBAlphaMtEph`
   --> src/Chap37/BSTSetBBAlphaMtEph.rs:230:28
    |
230 |             let mut tree = BSTBBAlphaMtEph::new();
    |                            ^^^^^^^^^^^^^^^ use of undeclared type `BSTBBAlphaMtEph`
    |
help: a struct with a similar name exists
    |
230 |             let mut tree = BSTSetBBAlphaMtEph::new();
    |                               +++

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0405, E0425, E0433.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 7s
Sampled Memory Usage: peak rust_verify RSS: 4457MB, peak z3 RSS: 372MB, min free: 21237MB
Sampled CPU Usage: rust_verify: 90s, z3 children: 82s
